--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
 anyio==3.6.1
+bandit==1.7.4
+click==8.1.3
+config==0.5.1
 fastapi==0.81.0
+flake8==5.0.4
+gitdb==4.0.9
+GitPython==3.1.27
+h11==0.13.0
 idna==3.3
+mccabe==0.7.0
+mypy==0.971
+mypy-extensions==0.4.3
+pbr==5.10.0
+psycopg2==2.9.3
+pycodestyle==2.9.1
 pydantic==1.9.2
+pyflakes==2.5.0
+PyYAML==6.0
+smmap==5.0.0
 sniffio==1.2.0
+SQLAlchemy==1.4.40
 starlette==0.19.1
+stevedore==4.0.0
+tomli==2.0.1
 typing_extensions==4.3.0
+uvicorn==0.18.3
