--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ fastapi==0.81.0
 flake8==5.0.4
 gitdb==4.0.9
 GitPython==3.1.27
-h11==0.13.0
-idna==3.3
+h11==0.14.0
+idna==3.4
 mccabe==0.7.0
 mypy==0.971
 mypy-extensions==0.4.3
@@ -16,9 +16,10 @@ psycopg2==2.9.3
 pycodestyle==2.9.1
 pydantic==1.9.2
 pyflakes==2.5.0
+PyJWT==2.5.0
 PyYAML==6.0
 smmap==5.0.0
-sniffio==1.2.0
+sniffio==1.3.0
 SQLAlchemy==1.4.40
 starlette==0.19.1
 stevedore==4.0.0
