--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,30 @@
-anyio==3.6.1
+alembic==1.8.1
+anyio==3.6.2
 bandit==1.7.4
 click==8.1.3
-config==0.5.1
-fastapi==0.85.1
+fastapi==0.87.0
 flake8==5.0.4
 gitdb==4.0.9
-GitPython==3.1.27
+GitPython==3.1.29
 h11==0.14.0
 idna==3.4
+Mako==1.2.3
+MarkupSafe==2.1.1
 mccabe==0.7.0
-mypy==0.982
+mypy==0.991
 mypy-extensions==0.4.3
-pbr==5.10.0
+pbr==5.11.0
+pip-autoremove==0.10.0
 psycopg2==2.9.5
 pycodestyle==2.9.1
 pydantic==1.10.2
 pyflakes==2.5.0
-PyJWT==2.5.0
+PyJWT==2.6.0
 PyYAML==6.0
 smmap==5.0.0
 sniffio==1.3.0
-SQLAlchemy==1.4.42
-starlette==0.20.4
-stevedore==4.0.0
-tomli==2.0.1
-typing_extensions==4.3.0
+SQLAlchemy==1.4.44
+starlette==0.21.0
+stevedore==4.1.1
+typing_extensions==4.4.0
 uvicorn==0.19.0
