--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,55 @@
 alembic==1.8.1
 anyio==3.6.2
+astor==0.8.1
+attrs==22.1.0
 bandit==1.7.4
 click==8.1.3
-fastapi==0.87.0
-flake8==5.0.4
+darglint==1.8.1
+docutils==0.19
+eradicate==2.1.0
+fastapi==0.88.0
+flake8==4.0.1
+flake8-bandit==3.0.0
+flake8-broken-line==0.5.0
+flake8-bugbear==22.10.27
+flake8-commas==2.1.0
+flake8-comprehensions==3.10.1
+flake8-debugger==4.1.2
+flake8-docstrings==1.6.0
+flake8-eradicate==1.4.0
+flake8-isort==4.2.0
+flake8-polyfill==1.0.2
+flake8-quotes==3.3.1
+flake8-rst-docstrings==0.2.7
+flake8-string-format==0.3.0
 gitdb==4.0.9
 GitPython==3.1.29
 h11==0.14.0
 idna==3.4
+isort==5.10.1
 Mako==1.2.3
 MarkupSafe==2.1.1
-mccabe==0.7.0
+mccabe==0.6.1
 mypy==0.991
 mypy-extensions==0.4.3
 pbr==5.11.0
-pip-autoremove==0.10.0
+pep8-naming==0.13.2
 psycopg2==2.9.5
-pycodestyle==2.9.1
+pycodestyle==2.8.0
 pydantic==1.10.2
-pyflakes==2.5.0
+pydocstyle==6.1.1
+pyflakes==2.4.0
+Pygments==2.13.0
 PyJWT==2.6.0
+python-dotenv==0.21.0
 PyYAML==6.0
+restructuredtext-lint==1.4.0
 smmap==5.0.0
 sniffio==1.3.0
+snowballstemmer==2.2.0
 SQLAlchemy==1.4.44
-starlette==0.21.0
+starlette==0.22.0
 stevedore==4.1.1
 typing_extensions==4.4.0
-uvicorn==0.19.0
+uvicorn==0.20.0
+wemake-python-styleguide==0.17.0
