--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==3.6.2
 astor==0.8.1
 attrs==22.1.0
 bandit==1.7.4
+certifi==2022.9.24
 click==8.1.3
 darglint==1.8.1
 docutils==0.19
@@ -25,15 +26,20 @@ flake8-string-format==0.3.0
 gitdb==4.0.9
 GitPython==3.1.29
 h11==0.14.0
+httpcore==0.16.2
+httpx==0.23.1
 idna==3.4
+iniconfig==1.1.1
 isort==5.10.1
 Mako==1.2.3
 MarkupSafe==2.1.1
 mccabe==0.6.1
 mypy==0.991
 mypy-extensions==0.4.3
+packaging==21.3
 pbr==5.11.0
 pep8-naming==0.13.2
+pluggy==1.0.0
 psycopg2==2.9.5
 pycodestyle==2.8.0
 pydantic==1.10.2
@@ -41,9 +47,12 @@ pydocstyle==6.1.1
 pyflakes==2.4.0
 Pygments==2.13.0
 PyJWT==2.6.0
+pyparsing==3.0.9
+pytest==7.2.0
 python-dotenv==0.21.0
 PyYAML==6.0
 restructuredtext-lint==1.4.0
+rfc3986==1.5.0
 smmap==5.0.0
 sniffio==1.3.0
 snowballstemmer==2.2.0
