--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.8.1
 anyio==3.6.2
 astor==0.8.1
+asyncpg==0.27.0
 attrs==22.1.0
 bandit==1.7.4
 certifi==2022.9.24
 click==8.1.3
+coverage==6.5.0
 darglint==1.8.1
 docutils==0.19
 eradicate==2.1.0
@@ -25,6 +27,7 @@ flake8-rst-docstrings==0.2.7
 flake8-string-format==0.3.0
 gitdb==4.0.9
 GitPython==3.1.29
+greenlet==2.0.1
 h11==0.14.0
 httpcore==0.16.2
 httpx==0.23.1
