Type hints for models were fixed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,8 @@ requires-python = ">=3.11"
 
 [tool.isort]
 multi_line_output = 3
+include_trailing_comma = true
 lines_after_imports = 2
+
+[tool.mypy]
+plugins = "sqlalchemy.ext.mypy.plugin"
