--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 alembic==1.8.1
 anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 astor==0.8.1
 asyncpg==0.27.0
 attrs==22.1.0
 bandit==1.7.4
 certifi==2022.9.24
+cffi==1.15.1
 click==8.1.3
 coverage==6.5.0
 darglint==1.8.1
@@ -45,6 +48,7 @@ pep8-naming==0.13.2
 pluggy==1.0.0
 psycopg2==2.9.5
 pycodestyle==2.8.0
+pycparser==2.21
 pydantic==1.10.2
 pydocstyle==6.1.1
 pyflakes==2.4.0
