--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ wemake-python-styleguide = "^0.17.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
 coverage = "^7.2.6"
+httpx = "^0.24.1"
 
 
 [tool.pytest.ini_options]
