--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,16 +17,18 @@ python = "^3.11"
 fastapi = "^0.95.2"
 pydantic = "^1.10.8"
 PyJWT = "^2.7.0"
+argon2-cffi = "^21.3.0"
 python-dotenv = "^1.0.0"
 SQLAlchemy = "^2.0.15"
 alembic = "^1.11.1"
 asyncpg = "^0.27.0"
+greenlet = "^2.0.2"
 uvicorn = "^0.22.0"
 gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
-wemake-python-styleguide = "^0.17.0"
+wemake-python-styleguide = "^0.18.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
