--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,24 +15,25 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.95.2"
-pydantic = "^1.10.8"
-PyJWT = "^2.7.0"
+pydantic = "^1.10.12"
+PyJWT = "^2.8.0"
 argon2-cffi = "^21.3.0"
 python-dotenv = "^1.0.0"
-SQLAlchemy = "^2.0.15"
-alembic = "^1.11.1"
+SQLAlchemy = "^2.0.20"
+alembic = "^1.12.0"
 asyncpg = "^0.27.0"
 greenlet = "^2.0.2"
 uvicorn = "^0.22.0"
 gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.3.0"
+mypy = "^1.5.1"
 wemake-python-styleguide = "^0.18.0"
+typos = "^1.16.9"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.3.1"
-coverage = "^7.2.6"
+pytest = "^7.4.0"
+coverage = "^7.3.0"
 httpx = "^0.24.1"
 
 
@@ -41,7 +42,11 @@ xfail_strict = true
 
 
 [tool.mypy]
-plugins = "sqlalchemy.ext.mypy.plugin"
+plugins = [
+    "sqlalchemy.ext.mypy.plugin",
+    "pydantic.mypy",
+]
+
 
 disallow_untyped_calls = true
 disallow_untyped_defs = true
